...
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/basics">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Step 1: Where will you be traveling?"
                        android:id="@+id/stepOne"
                        android:paddingTop="15dp"
...
                        android:ems="10"
                        android:layout_below="@+id/stepOne"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/stepOne"
                        android:layout_alignEnd="@+id/stepOne"
                        android:id="@+id/locationEditText"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:hint="Location" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/locationEditText"
...
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/stepTwo"
                        android:id="@+id/startDateEditText"
                        android:hint="Pick Start Date"
                        android:paddingLeft="@dimen/activity_horizontal_margin"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/stepTwo"
                        android:id="@+id/endDateEditText"
                        android:hint="Pick End Date"
                        android:paddingRight="@dimen/activity_horizontal_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
...
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/stepThree"
                        android:id="@+id/startTimeText"
                        android:hint="Pick Start Time"
                        android:paddingLeft="@dimen/activity_horizontal_margin"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/stepThree"
                        android:id="@+id/endTimeText"
                        android:hint="Pick End Date"
                        android:paddingRight="@dimen/activity_horizontal_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
...
                        android:paddingTop="10dp"
                        android:textSize="20dp"
                        android:text="to" />
                </RelativeLayout>
                <RelativeLayout
                    android:orientation="vertical"
                    android:id="@+id/filters"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Step 4: Select parking space features."
                        android:id="@+id/stepFour"
                        android:paddingTop="15dp"
                        android:textSize="20dp"/>
                    <LinearLayout
                        android:id="@+id/stepFourLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/stepFour">
                        <CheckBox
                            android:text="Compact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/compactBox" />
                        <CheckBox
                            android:text="Covered Parking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/coverBox" />
                        <CheckBox
                            android:text="Handicapped"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/handicappedBox" />
                    </LinearLayout>
...
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search!"
        android:id="@+id/searchButton"
        android:layout_below="@id/tabHost"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
